KmerSieve prototype for sequence search

--- a/New code/Makefile
+++ b/New code/Makefile
@@ -4,7 +4,7 @@ BIN=local/bin
 SRC=src
 CDEPS=/usr/local/lib/libbifrost.a -lz -pthread
 
-all: $(BIN) $(BIN)/mince $(BIN)/sketch $(BIN)/cluster $(BIN)/bitmatrix
+all: $(BIN) $(BIN)/mince $(BIN)/sketch $(BIN)/cluster $(BIN)/distinguish $(BIN)/sift
 
 $(BIN)/mince: $(SRC)/Mince.cpp
 	$(CC) $(CFLAGS) $(SRC)/Mince.cpp -o $(BIN)/mince $(CDEPS)
@@ -15,10 +15,13 @@ $(BIN)/sketch: $(SRC)/Sketch.cpp $(SRC)/Sketch.hpp
 $(BIN)/cluster: $(SRC)/UFClusters.cpp
 	$(CC) $(CFLAGS) $(SRC)/UFClusters.cpp -o $(BIN)/cluster $(CDEPS)
 
-$(BIN)/bitmatrix: $(SRC)/makeBitMatrix.cpp
-	$(CC) $(CFLAGS) $(SRC)/makeBitMatrix.cpp -o $(BIN)/bitmatrix $(CDEPS)
+$(BIN)/distinguish: $(SRC)/Distinguish.cpp
+	$(CC) $(CFLAGS) $(SRC)/Distinguish.cpp -o $(BIN)/distinguish $(CDEPS)
+
+$(BIN)/sift: $(SRC)/KmerSieve.cpp
+	$(CC) $(CFLAGS) $(SRC)/KmerSieve.cpp -o $(BIN)/sift $(CDEPS)
 
 clean:
-	rm -rf $(BIN)/sketch $(BIN)/mince $(BIN)/cluster $(BIN)/bitmatrix
+	rm -rf $(BIN)/sketch $(BIN)/mince $(BIN)/cluster $(BIN)/distinguish $(BIN)/sift
 
 	rm -f *.sketch fastx/*.xsketch fastx/*.msh fastx/*.sketch
